kubernetes/data-lakehouse/base/databases/clickstack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clickstack-clickhouse-lb
  namespace: data
  annotations:
    metallb.io/loadBalancerIPs: 10.10.10.10
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/instance: clickstack
    app.kubernetes.io/name: clickhouse
  ports:
    - name: http
      port: 8123
      targetPort: 8123
    - name: native
      port: 9000
      targetPort: 9000
